--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,21 @@
   "name": "at-form-input",
   "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#0.8-preview",
-    "at-core-theme": "TangereJs/at-core-theme#0.8-preview"
+    "tangere": "TangereJs/tangere#0.8-preview",
+    "at-core-theme": "TangereJs/at-core-theme#0.8-preview",
+    "at-form-text": "TangereJs/at-form-text#0.8-preview",
+    "at-form-checkbox": "TangereJs/at-form-checkbox#0.8-preview",
+    "at-form-password": "TangereJs/at-form-password#0.8-preview",
+    "at-form-number": "TangereJs/at-form-number#0.8-preview",
+    "at-form-file": "TangereJs/at-form-file#0.8-preview",
+    "at-form-image": "TangereJs/at-form-image#0.8-preview",
+    "at-form-date": "TangereJs/at-form-date#0.8-preview",
+    "at-form-daterange": "TangereJs/at-form-daterange#0.8-preview",
+    "at-form-codemirror": "TangereJs/at-form-codemirror#0.8-preview",
+    "at-form-markdown": "TangereJs/at-form-markdown#0.8-preview",
+    "at-form-lookup": "TangereJs/at-form-lookup#0.8-preview",
+    "at-form-radio": "TangereJs/at-form-radio#0.8-preview",
+    "at-doc-demo": "TangereJs/at-doc-demo#0.8-preview",
+    "at-doc-viewer": "TangereJs/at-doc-viewer#0.8-preview"
   }
 }
